--- a/URL Shortener/.classpath
+++ b/URL Shortener/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/mysql-connector-java-5.0.8"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Web Page Download"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
