--- a/Web Page Download/pom.xml
+++ b/Web Page Download/pom.xml
@@ -4,6 +4,10 @@
   <artifactId>crawler</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Web Crawler</name>
+	<configuration>
+		<downloadSources>true</downloadSources>
+		<downloadJavadocs>true</downloadJavadocs>
+	</configuration>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>test</testSourceDirectory>
@@ -18,4 +22,11 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-api</artifactId>
+  		<version>1.7.12</version>
+  	</dependency>
+  </dependencies>
 </project>
